src/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Applied_On__c</fullName>
        <label>Applied On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>PMP or Similar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCRUM/Agile Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Considered_For__c</fullName>
        <label>Considered For</label>
        <picklist>
            <picklistValues>
                <fullName>Engagement Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Engineer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First__c</fullName>
        <label>First</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_com_Development_Experience__c</fullName>
        <label>Force.com Development Experience</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 Yrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us</label>
        <picklist>
            <picklistValues>
                <fullName>Recruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by Friend/Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;ve Worked With Rainmaker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last__c</fullName>
        <label>Last</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Other_Certifications_Discussed__c</fullName>
        <label>List Other Certifications Discussed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notified_RMA_Passed__c</fullName>
        <label>Notified RMA Passed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Software Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Support Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Management_Experience__c</fullName>
        <label>Project Management Experience</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 Yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+ Yrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <picklist>
            <controllingField>Source__c</controllingField>
            <picklistValues>
                <fullName>SearchPointNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Employment Specialists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tallience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Experience__c</fullName>
        <label>SFDC Experience</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Dice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JobFox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA Passed Interviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA Passed NOT Interviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consider for Future Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First__c</columns>
        <columns>Last__c</columns>
        <columns>Status__c</columns>
        <columns>State__c</columns>
        <columns>Position__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Considered_For__c</columns>
        <columns>Email__c</columns>
        <columns>SFDC_Experience__c</columns>
        <columns>Source__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Architect</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>Architect,Design Consultant</value>
        </filters>
        <label>Architect</label>
    </listViews>
    <listViews>
        <fullName>Candidates_considered_for_open_positions</fullName>
        <columns>NAME</columns>
        <columns>First__c</columns>
        <columns>Last__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Email__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Project_Management_Experience__c</columns>
        <columns>Force_com_Development_Experience__c</columns>
        <columns>List_Other_Certifications_Discussed__c</columns>
        <columns>Certifications__c</columns>
        <columns>Applied_On__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Initial Review,Screening,Interviewing</value>
        </filters>
        <label>Candidates considered for open positions</label>
    </listViews>
    <listViews>
        <fullName>PM_Candidates</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>First__c</columns>
        <columns>Last__c</columns>
        <columns>Phone__c</columns>
        <columns>SFDC_Experience__c</columns>
        <columns>Comments__c</columns>
        <columns>Email__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>Project Manager</value>
        </filters>
        <label>PM Candidates</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Candidate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>